syntax = "proto3";
package qcore.pool;

option go_package = "github.com/qlabs-xyz/qcore/x/pool/types";

message Emission{
  string block_number = 2;
  string total_emission = 3;
  string emission_timestamp = 4;
}